# recc_api

./: .deepsource.toml  .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  config.go  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  handlers.go  hello_test.go  justfile  main.go  middleware.go  pyproject.toml  requirements.txt  routes.go  routes_test.go  server.go
.github/: build-push.yml  test.yml
.github/workflows/: build-push.yml  build.yml  deploy.yml  pull-request.yml  request.yml  tests.yml  unit-tests.yml
docs/: docs.go  swagger.json  swagger.yaml
logging/: logging.go
recc/: recc.go  server.py  settings.py
recc/routes/: __init__.py  health.py
routes/: routes.go
tests/: conftest.py  test_health.py
